--- a/.oblivious/service.yaml
+++ b/.oblivious/service.yaml
@@ -12,29 +12,29 @@ meta:
   git: https://github.com/ObliviousAI/FastAPI-Enclave-Services.git
   version: 0.1.0
 paths:
-- access: querier
+- access: admin
   path: /hello/
   short_description: Hello world example
-- access: querier
+- access: admin
   path: /outbound/
   short_description: Example to demonstrate allowlist urls
-- access: querier
+- access: admin
   path: /psi/submit_list
   short_description: Submit CSV list for private set intersection
-- access: querier
+- access: admin
   path: /psi/compare
   short_description: Get result for private set intersection
-- access: querier
+- access: admin
   path: /yao/submit_value
   short_description: Submit value list for Yao's Millionaires Problem
-- access: querier
+- access: admin
   path: /yao/compare
   short_description: Get result for Yao's Millionaires Problem
 roles:
 - role_auth: pkipsk
-  role_cardinality: 1
+  role_cardinality: 2
   role_description: This is simply an example role for demonstration purposes
-  role_name: querier
+  role_name: admin
 traffic:
   '0':
     name: inbound
